# fpl-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.html  README.md  app.py  pyproject.toml
app/: app.py
assets/: style.css
data/: fixtures.csv  players.csv  players_gw.csv  teams.csv
docs/source/: conf.py  index.rst  utils.rst
tests/: test_data_loading.py  test_data_preparation.py  test_data_visualization.py
tests/mock_data/: mock_fixtures.csv  mock_players.csv  mock_players_gw.csv  mock_teams.csv
utils/: data_loading.py  data_preparation.py  data_visualization.py
