[project]
name = "fpl-dashboard"
version = "0.1.0"
description = "Fantasy Premier League (FPL) online analytics dashboard."
authors = [
    {name = "Othmane Mahfoud",email = "mahfoud.othmane97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "sphinx (>=8.1.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx = "^8.1.3" 